--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -20,3 +20,6 @@ jobs:
         with:
           branch: gh-pages 
           folder: out
+          token: 
+          token: ${{ secrets.ACCESS_TOKEN }}
+          clean: true
